@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH AUTOSCAN "1" "January 2006" "autoscan 2.59c" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
+.TH AUTOSCAN "1" "April 2006" "autoscan 2.59c" "User Commands"
 .SH NAME
 autoscan \- Generate a preliminary configure.in
 .SH SYNOPSIS
