@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH AUTOUPDATE "1" "January 2006" "autoupdate 2.59c" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
+.TH AUTOUPDATE "1" "April 2006" "autoupdate 2.59c" "User Commands"
 .SH NAME
 autoupdate \- Update a configure.in to a newer Autoconf
 .SH SYNOPSIS
